view-transition. small fixes. try to make the bottom-bar visible

--- a/home-scripts/projects-view-transition-animation.css
+++ b/home-scripts/projects-view-transition-animation.css
@@ -1,6 +1,6 @@
-@view-transition {
-    navigation: auto;
-}
+/*@view-transition {*/
+/*    navigation: auto;*/
+/*}*/
 #content-frame{
     view-transition-name: main-content-frame;
 }
