--- a/home-scripts/style.css
+++ b/home-scripts/style.css
@@ -40,6 +40,8 @@ nav{
     left: var(--space-2);
     right: var(--space-2);
     bottom: 0;
+    z-index: var(--z-index-above-absolute);
+
     @media (orientation: portrait) {
         position: fixed;
     }
